--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "dcbot",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "@IrishBeets",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "^12.3.1",
-    "dotenv": "^8.2.0"
-  },
-  "devDependencies": {
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2"
-  }
+    "name": "dcbot",
+    "version": "0.0.1",
+    "description": "",
+    "main": "dist/index.js",
+    "scripts": {
+        "dev": "nodemon --exec babel-node src/index.js",
+        "build": "npx webpack",
+        "prebuild": "rimraf dist",
+        "start": "node dist/bundle.js",
+        "test": "jest"
+    },
+    "author": "@IrishBeets",
+    "license": "ISC",
+    "dependencies": {
+        "discord.js": "^12.3.1",
+        "dotenv": "^8.2.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.11.6",
+        "@babel/node": "^7.10.5",
+        "@babel/preset-env": "^7.11.5",
+        "eslint": "^7.9.0",
+        "eslint-config-prettier": "^6.12.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jest": "^24.0.2",
+        "eslint-plugin-prettier": "^3.1.4",
+        "jest": "^26.4.2",
+        "nodemon": "^2.0.4",
+        "prettier": "^2.1.2",
+        "rimraf": "^3.0.2"
+    }
 }
