--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
     },
     "rules": {
         "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
-        "comma-dangle": ["error", "always-multiline"],
+        "comma-dangle": [2, "only-multiline"],
         "comma-spacing": "error",
         "comma-style": "error",
         "curly": ["error", "multi-line", "consistent"],
