--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "discord.js": "^12.3.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "react-redux": "^7.2.1",
+        "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.8",
         "socket.io": "^2.3.0"
     },
     "devDependencies": {
