--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "discord.js": "^12.3.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "react-spring": "^8.0.27",
         "socket.io": "^2.3.0"
     },
     "devDependencies": {
