--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
         "@babel/core": "^7.11.6",
         "@babel/node": "^7.10.5",
         "@babel/preset-env": "^7.11.5",
+        "@types/cors": "^2.8.7",
+        "@types/express": "^4.17.8",
+        "@types/jest": "^26.0.14",
+        "@types/node": "^14.11.2",
         "eslint": "^7.9.0",
         "eslint-config-prettier": "^6.12.0",
         "eslint-plugin-import": "^2.22.0",
@@ -31,6 +35,7 @@
         "jest": "^26.4.2",
         "nodemon": "^2.0.4",
         "prettier": "^2.1.2",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "typescript": "^4.0.3"
     }
 }
