--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "randomcolor": "^0.6.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.1",
@@ -36,6 +37,7 @@
         ]
     },
     "devDependencies": {
+        "@types/randomcolor": "^0.5.5",
         "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
